--- a/search.html
+++ b/search.html
@@ -120,7 +120,7 @@
                 <div class="col border">
                     <div class="row border mb-2">
                         <div class="search-results px-3 pt-3">
-                            <p>About <b>200</b> search results for <b>"women'scloth"</b> (0.35 seconds) </p>
+                            <p>About <b>200</b> search results for <b>"women'scloth"</b></p>
                         </div>
                     </div>
                     <div class="row border search-row">
@@ -134,7 +134,7 @@
                                 <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
                                 <div class="card-text">
                                     <h6 class="font-weight-bold make pb-2">Uganda</h6>
-                                    <h3 class="pb-3">
+                                    <h3 class="pb-3 description">
                                       Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
                                       Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
                                       The piece can be styled with your favorite pair of heels for the perfect professional look. 
@@ -168,7 +168,7 @@
                               <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
                               <div class="card-text">
                                   <h6 class="font-weight-bold make pb-2">Uganda</h6>
-                                  <h3 class="pb-3">
+                                  <h3 class="pb-3 description">
                                     Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
                                     Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
                                     The piece can be styled with your favorite pair of heels for the perfect professional look. 
@@ -202,7 +202,7 @@
                               <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
                               <div class="card-text">
                                   <h6 class="font-weight-bold make pb-2">Uganda</h6>
-                                  <h3 class="pb-3">
+                                  <h3 class="pb-3 description">
                                     Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
                                     Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
                                     The piece can be styled with your favorite pair of heels for the perfect professional look. 
@@ -236,7 +236,7 @@
                               <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
                               <div class="card-text">
                                   <h6 class="font-weight-bold make pb-2">Uganda</h6>
-                                  <h3 class="pb-3">
+                                  <h3 class="pb-3 description">
                                     Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
                                     Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
                                     The piece can be styled with your favorite pair of heels for the perfect professional look. 
