Implement TSE changes

--- a/search.html
+++ b/search.html
@@ -62,7 +62,7 @@
                             <button class="dropdown-item" type="button">Accessories</button>
                         </div>
                     </div>
-                    <input type="text" placeholder="Search skirts,tops" class="text-area px-2 mx-1">
+                    <input type="text" placeholder="Search skirts" class="text-area px-2 mx-1">
                     <input type="text"  placeholder="price" class="text-area px-2">
                     <button class="bg-dark text-white border-0 search-btn">Search</button>
                 </form>
